# lyrebird

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/: __init__.py  audio_analyzer.py  candidate_finder.py  code_generator.py  explainer.py  generated_functions.py  main.py  musicbrainz_client.py  sandbox.py  similarity.py  spotify_client.py  youtube_client.py
tests/: __init__.py  test_audio_analyzer.py  test_candidate_finder.py  test_explainer.py  test_musicbrainz_client.py  test_setup.py  test_similarity.py  test_youtube_client.py
